--- a/index.html
+++ b/index.html
@@ -19,51 +19,51 @@
     Days Hours Minutes Seconds -->
   </head>
   <body>
-    <div class="content">
-      <h1 id="heading">We're launching soon</h1>
-      <p id="count">Count Down to The New Year </p>
-      <div class="box">
-        <div class="total">
-          <div class="first"></div>
-          <div class="second"></div>
-          <p class="number" id="days">45</p>
-          <p class="text" >Days</p>
-        </div>
-        <div class="total">
-          <div class="first"></div>
-          <div class="second"></div>
-          <p class="number" id="hours">45</p>
-          <p class="text" >Hours</p>
-        </div>
-        <div class="total">
-          <div class="first"></div>
-          <div class="second"></div>
-          <p class="number" id="minutes">45</p>
-          <p class="text" >Minutes</p>
-        </div>
-        <div class="total">
-          <div class="first"></div>
-          <div class="second"></div>
-          <p class="number" id="second">45</p>
-          <p class="text" >Second</p>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="socials">
-        <a href="#" id="facebook"></a>
-        <a href="#" id="instagram"></a>
-        <a href="#" id="pinterest"></a> 
-      </div>
-      <footer class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="twitter.com/saheed___">Saheed</a>.
-      </footer>
-    </div>
-    <script src="./main.js">
 
-    </script>
+      <div class="content">
+        <h1 id="heading">We're launching soon</h1>
+        <p id="count">Count Down to The New Year</p>
+        <div class="box">
+          <div class="total">
+            <div class="first"></div>
+            <div class="second"></div>
+            <p class="number" id="days">45</p>
+            <p class="text">Days</p>
+          </div>
+          <div class="total">
+            <div class="first"></div>
+            <div class="second"></div>
+            <p class="number" id="hours">45</p>
+            <p class="text">Hours</p>
+          </div>
+          <div class="total">
+            <div class="first"></div>
+            <div class="second"></div>
+            <p class="number" id="minutes">45</p>
+            <p class="text">Minutes</p>
+          </div>
+          <div class="total">
+            <div class="first"></div>
+            <div class="second"></div>
+            <p class="number" id="second">45</p>
+            <p class="text">Second</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="socials">
+          <a href="#" id="facebook"></a>
+          <a href="#" id="instagram"></a>
+          <a href="#" id="pinterest"></a>
+        </div>
+        <footer class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="twitter.com/saheed___">Saheed</a>.
+        </footer>
+      </div>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
