--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
       <div class="content">
-        <h1 id="heading">We're launching soon</h1>
+        <h1 id="heading">a new beginning is upon us</h1>
         <p id="count">Count Down to The New Year</p>
         <div class="box">
           <div class="total">
